--- a/lec.html
+++ b/lec.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>노하우</title>
     <link rel="stylesheet" href="CSS/default.css">
     <link rel="stylesheet" href="CSS/ui.css">
     <link rel="stylesheet" href="CSS/lec.css">
@@ -22,7 +22,7 @@
         <!-- primary -->
         <section class="primary">
             <div class="iframebox">
-                <iframe src="https://www.youtube.com/embed/tjA7nZHavT0" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/kWiCuklohdY" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="lecContainer">
                 <div class="lecName"></div>
