--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>CSS Flex</title>
+	<title>노하우</title>
 	<link rel="stylesheet" href="CSS/default.css">
 	<link rel="stylesheet" href="CSS/ui.css">
 	<link rel="stylesheet" href="CSS/index.css">
