--- a/mentorChatScreen.html
+++ b/mentorChatScreen.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <script src="JS/chatScreen.js"></script>
+    <script src="JS/mentorChatScreen.js"></script>
     <script>
 
         window.SpeechRecognition =
