--- a/signUp.html
+++ b/signUp.html
@@ -43,21 +43,14 @@
                 <div class="feedback">수강평</div>
             </div>
             <div class="bin">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, officiis. Illum corrupti commodi cumque voluptates dicta sed cum quae sapiente nobis dolore possimus vel praesentium ab, suscipit pariatur et animi.
+                
             </div>
         </section>
         <!-- menu -->
 		<div class="menu">
             <div class="menu-item chatMenu">
 				<i class="fas fa-comments"></i>
-				<div>채팅</div>
+				<div>소통</div>
 			</div>
             <div class="menu-item homeMenu">
 				<i class="fas fa-home"></i>
