--- a/chat.html
+++ b/chat.html
@@ -16,8 +16,21 @@
     <div class="page">
         <!-- header -->
         <header class="header">
-            <img class="arrow" src="images/back_arrow.png" alt="">
-            <h1 class="website-title">채 팅</h1>
+            <div class='titleCon'>
+                <img class="arrow" src="images/back_arrow.png" alt="">
+                <h1 class="website-title"></h1>
+            </div>
+
+            
+
+            <div class="options">
+                <div class="option1">
+                    채 팅
+                </div>
+                <div class="option2">
+                    커뮤니티
+                </div>
+            </div>
         </header>
 
 
@@ -28,7 +41,7 @@
         <div class="menu">
             <div class="menu-item chatMenu">
 				<i class="fas fa-comments"></i>
-				<div>채팅</div>
+				<div>소통</div>
 			</div>
             <div class="menu-item homeMenu">
 				<i class="fas fa-home"></i>
