--- a/index.html
+++ b/index.html
@@ -10,13 +10,41 @@
 	<link rel="stylesheet" href="CSS/ui.css">
 	<link rel="stylesheet" href="CSS/index.css">
 	<script src="https://kit.fontawesome.com/5d9d40e7fe.js" crossorigin="anonymous"></script>
+	<style>
+		.header {
+			flex-direction: column;
+			background-color: white;
+			color: black;
+		}
+
+		.titleCon {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			position: relative;
+			background-color: rgb(32, 211, 175);
+			color: white;
+		}
+
+		.arrow {
+			position: absolute;
+			height: 40%;
+			width: auto;
+			left: 10px;
+		}
+	</style>
 </head>
 
 <body>
 	<div class="page">
 		<!-- header -->
 		<header class="header">
-			<h1 class="website-title">노하우</h1>
+			<div class='titleCon'>
+				<img class="arrow" src="images/back_arrow.png" alt="">
+				<h1 class="website-title">노하우</h1>
+			</div>
 			<!-- <div id="modal-switch">⚑</div> -->
 		</header>
 
@@ -37,15 +65,18 @@
 				</div>
 			</div>
 
-
+			<div class="iframebox">
+				<iframe src="https://www.youtube.com/embed/XhJzwQcbUnA" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class='howToUse'>노하우 사용법을 알아봐요!</div>
 			<div class="search-form">
 				<input type="search" placeholder=" 검색어를 입력하세요">
-				<button class='mainSearch' ><i class="fas fa-search"></i></button>
+				<button class='mainSearch'><i class="fas fa-search"></i></button>
 			</div>
 
-			
-			
-			
+
+
+
 		</section>
 
 
@@ -53,11 +84,11 @@
 
 		<!-- menu -->
 		<div class="menu">
-            <div class="menu-item chatMenu">
+			<div class="menu-item chatMenu">
 				<i class="fas fa-comments"></i>
-				<div>채팅</div>
+				<div>소통</div>
 			</div>
-            <div class="menu-item homeMenu">
+			<div class="menu-item homeMenu">
 				<i class="fas fa-home"></i>
 				<div>홈</div>
 			</div>
@@ -71,6 +102,15 @@
 	<script src="JS/lecture.js"></script>
 	<script src="JS/index.js"></script>
 	<script src="JS/menu.js"></script>
+	<script>
+		(() => {
+			const arrow = document.querySelector('.arrow');
+			arrow.addEventListener('click', () => {
+				location.href = 'login.html';
+			});
+		})();
+
+	</script>
 </body>
 
 </html>
