--- a/myLecList.html
+++ b/myLecList.html
@@ -30,7 +30,7 @@
 		<div class="menu">
             <div class="menu-item chatMenu">
 				<i class="fas fa-comments"></i>
-				<div>채팅</div>
+				<div>소통</div>
 			</div>
             <div class="menu-item homeMenu">
 				<i class="fas fa-home"></i>
